# utilities

./: .gitignore  cov-build.py  log2time.py  tagparser.py
C++/: CMakeLists.txt
C++/inc/: IniParser.h  iniparser.h
C++/src/: IniParser.cpp  iniparser.cpp
C++/tests/: IniParserTest.cpp  MiscTest.cpp  iniparser_test.cpp
C++/tests/test_data/: dup.ini  no_section.ini  one_section_no_keyvalue.ini  three_sections_first_empty.ini  two_sections.ini  two_sections_no_keyvalue.ini
CppToolBox/: CMakeLists.txt  common.cmake  main.cpp
CppToolBox/inc/: FactoryMethod.h  IniParser.h  Logger.h  Logger.incl  MyTime.h  ObjCounter.h  Utilities.h
CppToolBox/src/: IniParser.cpp  Logger.cpp  MyTime.cpp  Utilities.cpp
CppToolBox/tests/: FactoryMethodTest.cpp  IniParserTest.cpp  LoggerTest.cpp  LoggerTtest.cpp  MyTimeTest.cpp  ObjCounterTest.cpp  UtilitiesTest.cpp
CppToolBox/tests/test_data/: empty.ini  four_sections.ini  one_section_with_no_name_section.ini  same_type_value.ini  three_sections_last_empty.ini  three_sections_second_empty.ini
python/: MySqlAccess.py  cov-build.py  decorator.py  filter-dup-jpg.py  gen_cscope_tags.py  linux-cpu-usage.py  wacai-xls-to-csv  wacai-xls-to-csv.py
python/PyQtDb/: DialogConnectToDatabase.py  DialogSqlQuery.py  MainWindow.py  MySqlAccess.py  main.py  utilities.py
python/PyQtDb/unittests/: MySqlAccessTest.py  utilitiesTest.py
python/balance/: baby-cost.ipynb  car-balance.ipynb  car-cost.ipynb  daily-balance.ipynb  wacai-2-my-csv.ipynb  wacai-xls-to-csvs.py
python/growth/: avgs.csv  growth.ipynb  growth.py  height-avgs.csv  height-data.csv  height-interpolated.csv  height-periodical-avg.csv  interpolated.csv  periodical-avg.csv  plot-results.rkt  weight-data.csv
python/spider/: main.py
python/unittests/: MySqlAccessTest.py
web/: file-upload-print-content.html
web/charts/: charts.html  plot.js  populate-table.js  record.js
web/db-access/: README.md  angular-cli.json  package.json
web/db-access/e2e/: app.e2e-spec.ts  app.po.ts
web/db-access/src/app/: app.component.spec.ts  app.component.ts  app.module.ts  app.store.ts  db-login.component.ts  hub.service.ts  index.ts  proxy.service.ts  rows.component.ts
web/db-access/src/app/actions/: conn.action.ts  db.actions.ts  getdbs.action.ts
web/db-access/src/app/db/: db-conn.model.ts  db-login.component.ts  db.models.ts  db.proxy.ts  db.repository.ts  db.service.ts  dbs.component.ts  rows.component.ts
web/db-access/src/app/reducers/: conn.reducer.ts  db.reducers.ts
web/mysql-service/: Dockerfile  app.js  package.json
web/mysql-service/public/lib/: get-columns.js  get-dbs.js  get-tables.js  mysql-query.js  select.js
web/mysql-service/routes/: columns.js  dbs.js  table.js  tables.js  test.js  users.js
